# ChangeLog for dev-java/wagon-http-shared
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Apr 2007; kiorky <kiorky@cryptelium.net> wagon-http-shared-1.0.ebuild:
  Migrating to new maven eclass

  18 Apr 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Added as a maven dependency
