@@ -1,4 +1,4 @@
 DIST wagon-http-shared-1.0.tar.bz2 7201 RMD160 8bb6d76f825fcce1de2a92ddd6a09f4e1272780a SHA1 f8eaeaa16612b43ef3b9dc4815d54697ec8caf5a SHA256 42895ce0dcbfef21ed36e777152a807a46f573caaeb7ccc2ec83fc889736ea98
-EBUILD wagon-http-shared-1.0.ebuild 729 RMD160 16d6df541de0ba83626942b590361b4f8d908511 SHA1 695cb6ce8f9d8e10498e290f0f9693c8d66c4e9d SHA256 648fc91d256ec329027730e9489034e654da8c30c7e51abdab953f1a1ffd8ab7
-MISC ChangeLog 324 RMD160 fd4ca0ab858adb6e0d02b0c7b8d9eff0bb9e1218 SHA1 c4b9535cd2109db50d35f90a3ee760f4af6d0cdc SHA256 64cdcf91b4127b2d6c7eb6392f8f752b1dcfd2708d3c507323caffce8d6cbd66
+EBUILD wagon-http-shared-1.0.ebuild 799 RMD160 bf559830f7444eca7346b86fba15c96f927a93b0 SHA1 77a42a5bbc2b2ae85f05493e99b1da297ffeb18b SHA256 b305191fe192a3986e4c22652b9eaeafe8b7bbcf1b10cff5ced02341f3131f57
+MISC ChangeLog 450 RMD160 e4b7d29af7ce937a5383af0d91dc5dc2f684b728 SHA1 1ac49bf1f4fef281f529d3e16ba6942d4565e139 SHA256 4a2bf6f6d1a02b996cd08f0f8c9c8fae16f04edcd6826353ab1760540168b2b5
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
